# acis

./: .env.example  .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml
.github/workflows/: build-android.yml  build-ios.yml
app/: App.tsx  app.json  eas.json  package-lock.json  package.json  tsconfig.json
app-android/: .gitignore  debug.keystore  local.properties.example  settings.gradle.kts
app-android/app/: build.gradle.kts  proguard-rules.pro
app-android/app/src/main/: AndroidManifest.xml
app-android/gradle/: libs.versions.toml
app/ios/GlassesAudio/: AudioSessionManager.swift
app/src/components/: CueChip.tsx  GlassesStatusBadge.tsx
app/src/glasses/: GlassesAudioAdapter.ts  cueFormatter.ts  cueQueue.ts
app/src/lib/: protocol.ts  ws.ts
app/src/navigation/: index.ts
app/src/screens/: PrepNotes.tsx  SessionDetail.tsx  SessionList.tsx  Settings.tsx
app/src/store/: glasses.ts  sessions.ts  settings.ts
docs/: README.md  accessibility.md  component_inventory.md  copy_deck.md  design_requirements.md  feature_spec.md  hud_design_spec.md  information_architecture.md  product_brief.md  screen_inventory.md  user_flows.md  user_personas.md
scripts/: gen_ts_protocol.py
src/acis/: __init__.py  __main__.py  cli.py  protocol.py
src/acis/application/: session_context.py
src/acis/application/use_cases/: extract_cues.py  process_chunk.py  start_session.py  stop_session.py
src/acis/domain/: entities.py  ports.py  services.py
src/acis/infrastructure/input_interfaces/ws/: app.py  router.py
src/acis/infrastructure/output_adapters/asr/: voxtral.py
src/acis/infrastructure/repositories/: models.py  sqlite.py
src/acis/settings/: __init__.py  injection.py
tests/: test_protocol.py  test_services.py
tests/smoke/: conftest.py  test_smoke.py
(+13 files in other folders)
